--- a/src/components/ObjectContainer.css
+++ b/src/components/ObjectContainer.css
@@ -5,11 +5,30 @@
   align-items: center;
 }
 
+.bottom-box {
+  width: 90%;
+  max-width: 606px;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: stretch;
+  margin: 10px auto;
+}
+
+.lives-container {
+  width: 100%;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .winner-container {
   position: relative;
-  width: 20vw;
+  width: 100%;
   border: 1px solid black;
-  margin: 10px auto;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -35,10 +54,4 @@
   background-image: url("../assets/soccer-field.svg");
   background-size: contain;
   background-repeat: no-repeat;
-}
-
-@media (max-width: 700px) {
-  .winner-container {
-    width: 50vw;
-  }
 }
