changed characterArr creating. added a loading spinner for play again

--- a/src/components/ObjectContainer.css
+++ b/src/components/ObjectContainer.css
@@ -5,6 +5,14 @@
   align-items: center;
 }
 
+.spinner-container {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
 .bottom-box {
   width: 90%;
   max-width: 606px;
