--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,12 @@
   margin: 0;
   padding: 0;
 }
+
+.wrong-overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 0, 0, 0.253);
+}
